<resources>
    <string name="app_name">FamilyDoctor</string>
    <string name="loading">loading</string>
    <string name="search">Search</string>

    <string name="tab_title_main_1_doctoc">Health news</string>
    <string name="tab_title_main_2_doctoc">Medical records created</string>
    <string name="tab_title_main_3_doctoc">Find the patient</string>
    <string name="tab_title_main_4_doctoc">Setting</string>

    <string name="tab_title_main_1_patient">Health news</string>
    <string name="tab_title_main_2_patient">My medical records</string>
    <string name="tab_title_main_3_patient">Find the dotor</string>
    <string name="tab_title_main_4_patient">Setting</string>

    <string name="S_D_T">Telephone number</string>
    <string name="M_X_N">Verification code</string>
    <string name="But_DK">Login</string>
    <string name="But_X_N">Confirm</string>
    <string name="But_Resend">Resend verification</string>

    <string name="GPS_not_enable">GPS is not enabled</string>
    <string name="enable_GPS">Turn on GPS, please!</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open">Open</string>
    <string name="cancel">Cancel</string>

    <string name="question_exit">Are you sure to quit the app?</string>


    <string name="select_an_account_type">Select an account type</string>
    <string name="doctor">Doctor</string>
    <string name="Patient">Patient</string>

    <string name="pill">Pill</string>
    <string name="Update_drug">Update drug</string>
    <string name="Drug_information_is_inaccurate">Drug information is inaccurate</string>
    <string name="X_has_been_updated"> has been updated!</string>
    <string name="X_was_added"> was added!</string>
    <string name="number">Number</string>

    <string name="Day_of_the_examination">Day of the examination: </string>
    <string name="On_reexamination">On re-examination: </string>
    <string name="Choose_reexamination_date">Choose re-examination date</string>
    <string name="Disease_name">Disease name</string>
    <string name="Full_name">Full name</string>

    <string name="Information_of">Information of</string>
    <string name="Phone_number_does_not_exist">Phone number does not exist</string>
    <string name="Invalid_return_date">Invalid return date</string>
    <string name="Add_medical_records_successfully">Add medical records successfully</string>
    <string name="The_information_is_not_valid">The information is not valid. Please check again!</string>

    <string name="Select_a_photo_from_the_gallery">Select a photo from the gallery</string>
    <string name="Take_a_new_photo">Take a new photo</string>
    <string name="Error_no_registration_information">Error, no registration information</string>
    <string name="Successfully_registered_information">Successfully registered information</string>
    <string name="Remind">Remind</string>
    <string name="The_disease_needs_treatment">The disease needs treatment</string>
    <string name="Patient_name">Patient name</string>
    <string name="Doctorname">Doctor name</string>

    <string name="Please_wait">Please wait… !</string>
    <string name="Cannot_be_empty">Cannot be empty</string>
    <string name="A_confirmation_code_has_been_sent">A confirmation code has been sent</string>
    <string name="Invalid_phone_number">Invalid phone number</string>

    <string name="Name">Name</string>
    <string name="Medical_specialty">Medical specialty</string>
    <string name="Address">Address</string>
    <string name="Phone_number">Phone number</string>
    <string name="Please_hold_long_to_call">Please hold long to call or see details!</string>
    <string name="View_this_patient_details">View this patient details</string>
    <string name="View_this_doctor_details">View this doctor details</string>
    <string name="Call">Call</string>

    <string name="Add_Avatar_picture">Add Avatar picture</string>
    <string name="Year_of_Birth">Year of Birth</string>
    <string name="Update">Update</string>
    <string name="Finished">Finished</string>
    <string name="Medical_records_information">Medical records information</string>
    <string name="Drug_list">Drug list</string>
    <string name="Enter_phone_number_of_the_patient">Enter phone number of the patient</string>
    <string name="Check">Check</string>
    <string name="Add_medicine">Add medicine</string>

    <string name="Application_name">Application name:</string>
    <string name="Version">Version: 1.0.0</string>
    <string name="Number_">Number: </string>
    <string name="Morning_">Morning: </string>
    <string name="Afternoon_">Afternoon: </string>
    <string name="Night_">Night: </string>
    <string name="Number">Number</string>
    <string name="Morning">Morning</string>
    <string name="Afternoon">Afternoon</string>
    <string name="Night">Night</string>
    <string name="Add_new_medical_record">Add new medical record</string>
    <string name="You_Yhave_not_saved_the_list">You have not saved the list, please save!.</string>
    <string name="Done">Done</string>
    <string name="Add_image_of_Doctoral_degree">Add image of Doctoral degree</string>
    <string name="Doctoral_degree">Doctoral degree</string>
    <string name="Register">Register</string>

    <string name="Hello">Hello !</string>
    <string name="User">User</string>
    <string name="Application_information"> Application information</string>
    <string name="Feedback"> Feedback</string>
    <string name="Log_out"> Log out</string>
    <string name="Update_information">  Update information</string>
    <string name="Enter_the_phone_number_to_search">  Enter the phone number to search  </string>
    <string name="Add">Add</string>
    <string name="News">News</string>
    <string name="Processing">Processing...</string>
    <string name="Are_you_sure_you_want_to_log_out">Are you want to log out?</string>
    <string name="You_are_here">You are here!</string>
    <string name="Contact_Details_">Contact Details:</string>
    <string name="Personal_information">Personal information</string>
    <string name="Gmail_was_not_found">Gmail was not found</string>
    <string name="Feedback_about_FamilyDoctor">Feedback about FamilyDoctor</string>





    <string-array name="danhSachThuoc">
        <item>	Atropin sulfat	</item>
        <item>	Lidocain	</item>
        <item>	Diclo fenac	</item>
        <item>	Nimesulid	</item>
        <item>	Meloxicam	</item>
        <item>	Methyl salicylat	</item>
        <item>	Paracetamol	</item>
        <item>	Allopurinol	</item>
        <item>	Colchicin	</item>
        <item>	Alpha chymotrypsin	</item>
        <item>	Serratiopeptidase	</item>
        <item>	Glucosamin	</item>
        <item>	Descotatyl	</item>
        <item>	Cetirizin	</item>
        <item>	Cinnarizin	</item>
        <item>	Clorphenamin	</item>
        <item>	Diphenhydramin	</item>
        <item>	Epinephrin	</item>
        <item>	Loratadin	</item>
        <item>	Fexofenadin	</item>
        <item>	Atropin	</item>
        <item>	Albendazol	</item>
        <item>	Mebendazol	</item>
        <item>	Amoxicilin	</item>
        <item>	Amoxicilin	</item>
        <item>	Cefadroxil	</item>
        <item>	Cefalexin	</item>
        <item>	Cefixim	</item>
        <item>	Cefuroxim	</item>
        <item>	Cefotaxim	</item>
        <item>	Ceftriaxon	</item>
        <item>	Gentamicin	</item>
        <item>	Tobramycin	</item>
        <item>	Metronidazol	</item>
        <item>	Clindamycin	</item>
        <item>	Erythromycin	</item>
        <item>	Spiramycin	</item>
        <item>	Clarithromycin	</item>
        <item>	Ciprofloxacin	</item>
        <item>	Doxycyclin	</item>
        <item>	Aciclovir	</item>
        <item>	Fluconazol	</item>
        <item>	Griseofulvin	</item>
        <item>	Ketoconazol	</item>
        <item>	Nystatin	</item>
        <item>	Neotergynal	</item>
        <item>	Folic acid (Vitamin B9)	</item>
        <item>	Tranexamicacid	</item>
        <item>	Glyceryl trinitrat	</item>
        <item>	Trimetazidin	</item>
        <item>	Cordarone	</item>
        <item>	Amlodipin	</item>
        <item>	Captopril	</item>
        <item>	Losartan	</item>
        <item>	Nifedipin	</item>
        <item>	Atorvastatin 	</item>
        <item>	Piracetam	</item>
        <item>	Ginkgo biloba	</item>
        <item>	Clotrimazol	</item>
        <item>	Flucina	</item>
        <item>	Oxy già	</item>
        <item>	Xanh methylen	</item>
        <item>	C?n 70°	</item>
        <item>	C?n iod	</item>
        <item>	Povidone iodine	</item>
        <item>	Furosemid	</item>
        <item>	Aluminum phosphat	</item>
        <item>	Omeprazol	</item>
        <item>	Acetyl leucin	</item>
        <item>	Dimenhydrinat	</item>
        <item>	Domperidon	</item>
        <item>	Metoclopramid	</item>
        <item>	Atropin (sulfat)	</item>
        <item>	Spasmaverin	</item>
        <item>	Nospa	</item>
        <item>	Buscopan	</item>
        <item>	Glycerol	</item>
        <item>	Sorbitol	</item>
        <item>	Duphalac	</item>
        <item>	Diosmectit	</item>
        <item>	Lactobacillus acidophilus	</item>
        <item>	Loperamid	</item>
        <item>	Neopeptin	</item>
        <item>	Protolog	</item>
        <item>	Dapflon	</item>
        <item>	Dexamethason	</item>
        <item>	Hydrocortison	</item>
        <item>	Prednisolon	</item>
        <item>	Gliclazid	</item>
        <item>	Metformin	</item>
        <item>	Natri clorid 0.9%	</item>
        <item>	Gentamycin 0.3%	</item>
        <item>	Rhinex	</item>
        <item>	Otifa	</item>
        <item>	Oxytocin </item>
        <item>	Rotunda	</item>
        <item>	Sulpirid	</item>
        <item>	Lexomil	</item>
        <item>	Salbutamol	</item>
        <item>	Ventolin	</item>
        <item>	Theophylin	</item>
        <item>	N-acetylcystein	</item>
        <item>	Calci clorid	</item>
        <item>	Glucose 30%	</item>
        <item>	Glucose 5%	</item>
        <item>	Natri clorid 0.9%	</item>
        <item>	Pantogen 500ml	</item>
        <item>	Ringer Lactat	</item>
        <item>	Aminoplasma 250ml	</item>
        <item>	Vitamin C	</item>
        <item>	Vitamin E	</item>
        <item>	Vitamin PP	</item>
        <item>	Vitamin A	</item>
    </string-array>

</resources>
