<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView

                android:id="@+id/avataUser"
                android:src="@drawable/logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                />
        </android.support.v7.widget.CardView>


        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Hello"
            android:textColor="#000"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txtNameShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/User"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="30sp"
            />

        <TextView
            android:id="@+id/txtCapNhatThongTin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="left|center"
            android:text="@string/Update_information"
            android:textStyle="bold"
            android:drawableLeft="@drawable/update_icon_large_40"/>

        <TextView
            android:id="@+id/txtThongTinUngDung"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="left|center"
            android:text="@string/Application_information"
            android:textStyle="bold"
            android:drawableLeft="@drawable/logo_big_information_40"/>

        <TextView
            android:id="@+id/txtPhanHoiUngDung"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="left|center"
            android:text="@string/Feedback"
            android:textStyle="bold"
            android:drawableLeft="@drawable/feedback_icon_40"/>

        <TextView

            android:drawableLeft="@drawable/logout_icon_40"
            android:id="@+id/txtDangXuat"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="left|center"
            android:text="@string/Log_out"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>

