<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <include
        layout="@layout/layout_toolbar">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_gravity="center_horizontal"
                android:id="@+id/ImgAvaE"
                android:background="@drawable/add_picture"
                android:layout_width="150dp"
                android:layout_height="150dp" />


            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Add_Avatar_picture" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:hint="@string/Full_name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/HoTenE"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:hint="@string/Year_of_Birth"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spNamSinh"
                    android:layout_marginLeft="5dp"
                    android:layout_width="100dp"
                    android:layout_height="20dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:hint="@string/Address"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/DiaChiE"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_margin="5dp"
                    android:id="@+id/Submit"
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#027598"
                    android:textColor="@color/white"
                    android:text="@string/Update"
                    />
                <Button
                    android:layout_margin="5dp"
                    android:id="@+id/Cancel"
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#027598"
                    android:textColor="@color/white"
                    android:text="@string/cancel"
                    />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
