<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarThemHoSoBenhAn"
        layout="@layout/layout_toolbar">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:weightSum="1">

                    <EditText
                        android:hint="@string/Enter_phone_number_of_the_patient"
                        android:id="@+id/edtSoDienThoaiCanKiemTra"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:inputType="phone" />

                    <Button
                        android:id="@+id/btnKiemTra"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:text="@string/Check"
                        android:background="#027598"
                        android:textColor="#ffffff"
                        android:textAllCaps="true" />
                </LinearLayout>


                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/layoutThemHoSoBenhAn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_margin="5dp"
                        android:text="@string/Disease_name"
                        android:textStyle="bold" />


                    <EditText
                        android:id="@+id/edtTenBenhTrongHoSoBenhAn"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="5dp" />

                    <TextView
                        android:id="@+id/txtChonNgayTaiKham"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/Choose_reexamination_date"
                        android:background="#027598"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

    <LinearLayout
        android:weightSum="2"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:visibility="gone"
            android:id="@+id/btnThemThuoc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Add_medicine"
            android:background="#027598"
            android:textColor="#ffffff"
            android:textAllCaps="false"
            android:layout_marginRight="5dp"/>

        <Button
            android:visibility="gone"
            android:id="@+id/btnHoanThanhHoSoBenhAn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Finished"
            android:background="#027598"
            android:textColor="#ffffff"
            android:textAllCaps="false" />

    </LinearLayout>

    <ListView
        android:visibility="gone"
        android:id="@+id/lvDanhSachThuocDaThem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>


