<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Number"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtSoLuongThuoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:inputType="number" />

        <EditText
            android:id="@+id/edtDonViThuoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/pill"
            android:textColor="#ff6f00" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkSang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Morning" />

        <EditText
            android:id="@+id/edtSoLuongSang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:inputType="number"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtDonViSang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/pill"
            android:textColor="#ff6f00"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkTrua"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Afternoon" />

        <EditText
            android:id="@+id/edtSoLuongTrua"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:inputType="number"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtDonViTrua"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/pill"
            android:textColor="#ff6f00"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox

            android:id="@+id/chkChieu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Night" />

        <EditText
            android:id="@+id/edtSoLuongChieu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:inputType="number"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtDonViChieu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/pill"
            android:textColor="#ff6f00"
            android:visibility="gone" />

    </LinearLayout>

    <Button
        android:id="@+id/btnXacNhan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="5dp"
        android:background="#027598"
        android:textColor="@color/white"
        android:text="@string/Add" />

</LinearLayout>