<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtTenThuocSeThem"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:enabled="false"
        android:gravity="center"
        android:textColor="#ff6f00" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:text="@string/Number_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtSoLuongThuoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:inputType="number" />

        <EditText
            android:id="@+id/edtDonViThuoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="phone"
            android:enabled="false"
            android:text="@string/pill"
            android:textColor="#ff6f00" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkSang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Morning_" />

        <EditText
            android:id="@+id/edtSoLuongSang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:inputType="number"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtDonViSang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/pill"
            android:textColor="#ff6f00"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkTrua"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Afternoon_" />

        <EditText
            android:visibility="gone"
            android:id="@+id/edtSoLuongTrua"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:inputType="number" />

        <EditText
            android:visibility="gone"
            android:id="@+id/edtDonViTrua"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:enabled="false"
            android:text="@string/pill"
            android:textColor="#ff6f00" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox

            android:id="@+id/chkChieu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Night_" />

        <EditText
            android:visibility="gone"
            android:id="@+id/edtSoLuongChieu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:inputType="number" />

        <EditText
            android:visibility="gone"
            android:id="@+id/edtDonViChieu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:enabled="false"
            android:text="@string/pill"
            android:textColor="#ff6f00" />

    </LinearLayout>

    <Button
        android:id="@+id/btnXacNhanCapNhatThuoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Update_drug"
        android:background="#027598"
        android:textColor="@color/white"
        />

</LinearLayout>